# StocksBot_CrossP

./: .gitignore  ALPACA_SETUP.md  API.md  BUILD_STANDALONE.md  CLEANUP_KEEP_REMOVE_MATRIX.md  CONTRIBUTING.md  DATABASE_SETUP.md  DEVELOPMENT.md  HOW_TO_TEST_AND_BUILD.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MILESTONE1_SUMMARY.md  MILESTONE2_SUMMARY.md  MILESTONE3_4_SUMMARY.md  MODULES.md  Makefile  NOTIFICATIONS.md  OPERATIONS.md  PR_SUMMARY.md  QUICKSTART_STANDALONE.md  QUICK_REFERENCE.md  README.md  REAL_TRADING_IMPLEMENTATION.md  SCAFFOLD_SUMMARY.md  SECURITY.md  SIDECAR.md  STRATEGIES.md  StocksBot_Help_Guide.html  TESTING_AND_BUILD.md  TRADING_FEATURES.md  package-lock.json  package.json  setup.bat  setup.sh  test-recent-changes.sh
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  app.py  build-backend.spec  requirements.txt  run_strategy_example.py  stocksbot.db-shm  stocksbot.db-wal
backend/alembic/: env.py
backend/api/: __init__.py  health.py  middleware.py  models.py  optimizer_worker.py  routes.py  runner_manager.py  storage_examples.py
backend/audit/: __init__.py
backend/config/: __init__.py  investing_defaults.py  paths.py  risk_profiles.py  settings.py  strategy_config.py
backend/engine/: __init__.py  risk_manager.py  strategies.py  strategy_interface.py  strategy_runner.py
backend/export/: __init__.py
backend/services/: __init__.py  (+10 more)
scripts/: build-standalone.sh  build-ui-with-metadata.mjs  set-version.mjs  test-standalone.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+76 files in other folders)
