[package]
name = "stocksbot"
version = "0.1.0"
description = "Cross-platform StocksBot desktop application"
authors = ["StocksBot Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
keyring = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devUrl` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devUrl` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
